fix precise export bus not outputting correct amount of items in craft mode